midpoint/release/2.0/install.adoc
---
release-version: '2.0'
---
= Installing MidPoint 2.0 "Rhea" From Binary Distribution
:page-layout: release-install-legacy
:release-version: 2.0
:page-nav-title: Installation Instructions
:page-wiki-name: Installing midPoint from Binary Release - 2.0
:page-wiki-id: 4424067
:page-wiki-metadata-create-user: semancik
:page-wiki-metadata-create-date: 2012-06-20T13:40:30.275+02:00
:page-wiki-metadata-modify-user: ifarinic
:page-wiki-metadata-modify-date: 2012-11-13T15:26:11.484+01:00
:page-liquid:

{% for v in site.data.midpoint-versions %}{% if v.version == page.release-version %}{% assign this = v %}{% endif %}{% endfor %}

MidPoint is a Java web application distributed in a form of `WAR` archive.
All that is essentially needed is to deploy it in a suitable container.
This guide provides instructions to install midPoint in Apache Tomcat.

== Before You Start

=== Java SE Development Kit 6

The development environment requires at least JDK 6 update 26.
As far as after February 2013, Oracle will no longer post updates of Java SE 6 to its public download sites (see link:http://www.oracle.com/technetwork/java/eol-135779.html[http://www.oracle.com/technetwork/java/eol-135779.html]), recommended is JDK 7 which you can download at link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[http://www.oracle.com/technetwork/java/javase/downloads/index.html].

`JAVA_HOME` environment variable should point to the JDK installation path.


=== Java Cryptography Extension (JCE) Unlimited Strength Jurisdiction Policy Files 6

*Optional* AES-128 is used by default for encrypt/decrypt operations, so JCE is not needed.
If you want to use bigger key size, e.g. AES-256, then JCE is required for cryptographic operations.
You can download it at link:http://www.oracle.com/technetwork/java/javase/downloads/index.html[http://www.oracle.com/technetwork/java/javase/downloads/index.html]. After downloading zip file follow installation instructions written in README.txt


=== Apache Tomcat

midPoint needs an application server.
Currently, Apache Tomcat 6.x or 7.x is supported.
More application servers will be supported in later releases.

Apache Tomcat can be downloaded from link:http://tomcat.apache.org/download-70.cgi[http://tomcat.apache.org/download-70.cgi]. The Apache Tomcat installation directory is further referenced as <tomcat>.
In windows platform prefer downloading of zip file to downloading of windows installer as later do not populate bin directory with all batch files.
You will start tomcat server via running the startup.bat file from <tomcat>\bin directory.


== Installation

++++
{% include release-install-download-v1.html this=this %}
++++
=== Directory for Custom Components (midpoint.home)

If you intend to use custom connectors or schemas you need to create a directory anywhere on your system.
This directory will be used to store your custom connector code, schemas, initial configuration and may also contains other files.
MidPoint will populate that directory on first start.
The directory will not be overwritten when midPoint is restarted or redeployed.

As an intended side-effect, this directory will also be used to store your embedded database repository data (H2 or BaseX).

If you don't want to use custom connectors or you want just to try midPoint, you can skip this chapter and continue to the Initialize Database section.


==== Create the Directory

You can create your custom directory anywhere in your system.
We often use locations such as `/opt/midpoint` or `/var/opt/midpoint`. The directory has to be writable by the application server user.

The directory structure is described xrefv:/midpoint/reference/before-4.8/deployment/midpoint-home-directory/[here].


==== Tomcat "catalina.sh" Customization

To actually use the Custom Directory, modify the "`catalina.sh`" script located in `<tomcat>/bin/catalina.sh` and set the "JAVA_OPTS" variable.

[source]
----

...
JAVA_OPTS="$JAVA_OPTS -Dmidpoint.home=/opt/midpoint -XX:MaxPermSize=256m"
...

----


=== Initialize Database

Repository initialization is not required, an embedded database repository (H2) will be used by default.
The database files will be stored in `midpoint.home` directory.


=== Deploy midPoint

To deploy midPoint WAR file, use the following steps:

. Stop Tomcat if it's already running.

. Copy `midpoint.war` to `<tomcat>/webapps directory`.

. Start Tomcat.
It should pick up and deploy the "midpoint" application.


== Test midPoint administration GUI

Log in to the midPoint administration console using the following URL:

link:http://localhost:8080/midpoint/admin/[http://localhost:8080/midpoint/admin/]

[%autowidth,cols="h,1"]
|===
|  Username  |  administrator

|  Password
|  secret

|===

A home page of the midPoint console should be displayed.
This is a  pretty dynamic web application using AJAX for better user interaction.
The look&feel is quite minimalistic now, we are working on an  improvement just now.

If there is a problem, please check Tomcat logs in `<tomcat>/log/catalina.out` and `<tomcat>/log/idm.log`.

For a quick introduction to use of midPoint please follow the instructions on xref:/midpoint/get-started/quick-start/[First Steps] page.


== See Also

* xref:/midpoint/get-started/quick-start/[First Steps]

* xref:/midpoint/release/[midPoint Releases]
